--- a/Ejercicio5.html
+++ b/Ejercicio5.html
@@ -8,29 +8,30 @@
 </head>
 <body>
     <h1>Mis playlist</h1>
-
-    <h2>Exitos de los 80s</h2>
-        <p>Duración 467 min</p>
-        <p>Rock</p>
-        <h3>Canciones</h3>
-        <ol>
-            <li>Estamos melos</li>
-        </ol>
-
-    <h2>Exitos de los 90s</h2>
-        <p>Duración 169 min</p>
-        <p>JAZZ</p>
-        <h3>Canciones</h3>
-        <ol>
-            <li>Estamos melos</li>
-        </ol>
-
-    <h2>Funck y soul</h2>
-        <p>Duración 2 horas de reprodución</p>
-        <p>Soul</p>
-        <h3>Canciones</h3>
-        <ol>
-            <li>Estamos melos</li>
-        </ol>
+    <span>
+        <h2>Exitos de los 80s</h2>
+            <p>Duración 467 min</p>
+            <p>Rock</p>
+            <h3>Canciones</h3>
+            <ol>
+                <li>Estamos melos</li>
+            </ol>
+    
+        <h2>Exitos de los 90s</h2>
+            <p>Duración 169 min</p>
+            <p>JAZZ</p>
+            <h3>Canciones</h3>
+            <ol>
+                <li>Estamos melos</li>
+            </ol>
+    
+        <h2>Funck y soul</h2>
+            <p>Duración 2 horas de reprodución</p>
+            <p>Soul</p>
+            <h3>Canciones</h3>
+            <ol>
+                <li>Estamos melos</li>
+            </ol>
+        </span>
 </body>
 </html>
